force-app/main/default/objects/DHS_Contract_Setting__c/DHS_Contract_Setting__c.object-meta.xml
<CustomObject>
    <label>Contract Setting</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Contract Setting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>