force-app/main/default/objects/DHS_Contract_Setting__c/fields/Contract_clearance_level__c.field-meta.xml
<CustomField>
    <fullName>Contract_clearance_level__c</fullName>
    <label>Contract clearance level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Secret</fullName>
            </value>
            <value>
                <fullName>Top Secret</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>