force-app/main/default/objects/DHS_Contract_Setting__c/fields/Coverage_type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_type__c</fullName>
    <label>Coverage type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SCA</fullName>
            </value>
            <value>
                <fullName>EO 13706</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>